(+) Several features added to the default template (e.g. shorten text, hiding categories)

--- a/Site/usr/templates/default3/css/theme.less
+++ b/Site/usr/templates/default3/css/theme.less
@@ -16,7 +16,7 @@
 @corners: angular;
 @colour-set: sobipro;
 @small-image: 100px;
-
+@carousel-image: 500px;
 
 
 //-------------------------------------------------------------------------------------*/
@@ -1221,8 +1221,6 @@
 .SobiPro .disabledArea a {
     cursor: progress;
 }
-
-
 
 // Common fields styling via variable CSS classes
 // (don't work if you change the field CSS classes in the Fields Manager)
