(+) Coloured tabs support in default templates

--- a/Site/usr/templates/B3-default3/css/theme.less
+++ b/Site/usr/templates/B3-default3/css/theme.less
@@ -13,7 +13,8 @@
 // This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
-@corners: angular;
+//Default values
+@corners: rounded;
 @colour-set: sobipro;
 @small-image: 100px;
 @big-image: 300px;
@@ -65,27 +66,106 @@
 
 // Mixins
 // ----------------------------------------
-.lightBackground {
-    border-color: fade(@base-color, 20%);
-    background-color: fade(saturate(@base-color, 25%), 4%);
-    & when (@inverse = inverse) {
-        border-color: fade(darken(@active-color, 20%), 40%);
-        background-color: fade(darken(@active-color,45%), 35%);
+.lightbackground() {
+    background-color: lighten(saturate(@base-color, 15%), 57%);
+    & when (@colour-set = cornflower) {
+        background-color: lighten(saturate(@base-color, 15%), 45%);
+    }
+    & when (@colour-set = cornfield) {
+        background-color: lighten(saturate(@base-color, 15%), 40%);
+    }
+    & when (@colour-set = malva) {
+        background-color: lighten(saturate(@base-color, 15%), 50%);
+    }
+    & when (@colour-set = meadow) {
+        background-color: lighten(saturate(@base-color, 15%), 60%);
+    }
+    & when (@colour-set = poppyseed) {
+        background-color: lighten(saturate(@base-color, 5%), 62%);
+    }
+    & when (@colour-set = roses) {
+        background-color: lighten(saturate(@base-color, 28%), 48%);
+    }
+    & when (@colour-set = blackwidow) {
+        background-color: darken(@active-color, 65%);
     }
 }
-.mediumBackground {
-    border-color: fade(@base-color, 25%);
-    background-color: fade(saturate(@base-color, 25%), 17%);
-    & when (@inverse = inverse) {
+.lightborders() {
+    @border-color: lighten(@base-color, 36%);
+    & when (@colour-set = cornflower) {
+        border-color: lighten(@base-color, 26%);
+    }
+    & when (@colour-set = cornfield) {
+        border-color: lighten(@base-color, 26%);
+    }
+    & when (@colour-set = malva) {
+        border-color: lighten(@base-color, 26%);
+    }
+    & when (@colour-set = meadow) {
+        border-color: lighten(@base-color, 36%);
+    }
+    & when (@colour-set = poppyseed) {
+        border-color: lighten(@base-color, 36%);
+    }
+    & when (@colour-set = roses) {
+        border-color: lighten(@base-color, 26%);
+    }
+    & when (@colour-set = blackwidow) {
         border-color: darken(@active-color, 50%);
-        background-color: fade(darken(@active-color, 35%), 90%);
+    }
+}
+.mediumbackground() {
+    background-color: lighten(saturate(@base-color, 15%), 47%);
+    & when (@colour-set = cornflower) {
+        background-color: lighten(saturate(@base-color, 15%), 45%);
+    }
+    & when (@colour-set = cornfield) {
+        background-color: lighten(saturate(@base-color, 15%), 30%);
+    }
+    & when (@colour-set = malva) {
+        background-color: lighten(saturate(@base-color, 15%), 40%);
+    }
+    & when (@colour-set = meadow) {
+        background-color: lighten(saturate(@base-color, 5%), 50%);
+    }
+    & when (@colour-set = poppyseed) {
+        background-color: lighten(saturate(@base-color, 5%), 52%);
+    }
+    & when (@colour-set = roses) {
+        background-color: lighten(saturate(@base-color, 28%), 42%);
+    }
+    & when (@colour-set = blackwidow) {
+        background-color: darken(@active-color, 75%);
+    }
+}
+.mediumborders() {
+    border-color: lighten(@base-color, 26%);
+    & when (@colour-set = cornflower) {
+        border-color: lighten(@base-color, 26%);
+    }
+    & when (@colour-set = cornfield) {
+        border-color: lighten(@base-color, 16%);
+    }
+    & when (@colour-set = malva) {
+        border-color: lighten(@base-color, 16%);
+    }
+    & when (@colour-set = meadow) {
+        border-color: lighten(@base-color, 26%);
+    }
+    & when (@colour-set = poppyseed) {
+        border-color: lighten(@base-color, 16%);
+    }
+    & when (@colour-set = roses) {
+        border-color: lighten(@base-color, 25%);
+    }
+    & when (@colour-set = blackwidow) {
+        border-color: darken(@active-color, 60%);
     }
 }
 .headertext {
     font-size: 22px;
     color: @base-color;
 }
-
 
 //otherwise buttons are a bit too hight to align with input boxes
 .SobiPro .btn i {
@@ -135,6 +215,7 @@
     margin-top: 10px;
     font-size: 22px;
     font-weight: 300;
+    border-bottom: 1px solid lighten(@base-color, 50%);
 }
 .SobiPro .help-block {
     font-size: 13px;
@@ -161,14 +242,13 @@
 
 .SobiPro .table th,
 .SobiPro .table td {
-    border-color: fade(@base-color, 20%);
-    & when (@inverse = inverse) {
-        border-color: fade(darken(@active-color, 20%), 40%);
-    }
+    .lightborders();
+
 }
 .SobiPro .table-striped tbody > tr:nth-child(2n+1) > td,
 .SobiPro .table-vstriped tbody > tr > td:nth-child(2n+1) {
-    .lightBackground;
+    .lightbackground();
+    .lightborders();
 }
 .SobiPro .table.table-vstriped th,
 .SobiPro .table.table-vstriped td {
@@ -176,7 +256,7 @@
 }
 .SobiPro .table.table-vstriped td {
     border-right: 1px solid;
-    border-color: fade(@base-color, 20%);
+    .lightborders();
 }
 .SobiPro .table.table-vstriped > thead > tr > th {
     border-bottom: none;
@@ -400,7 +480,8 @@
 .SobiPro .pagination > .disabled > a,
 .SobiPro .pagination > .disabled > a:hover,
 .SobiPro .pagination > .disabled > a:focus {
-    .lightBackground;
+    .lightbackground();
+    .lightborders();
     color: saturate(darken(@base-color, 12%), 20%);
     & when (@inverse = inverse) {
         color: lighten(@base-color, 50%);
@@ -543,10 +624,13 @@
     color: saturate(darken(@base-color, 5%), 25%);
 }
 .SobiPro .bg-sigsiu {
-    .mediumBackground;
+    .mediumborders();
+    .mediumbackground();
+
 }
 .SobiPro .bg-sigsiu-light {
-    .lightBackground;
+    .lightbackground();
+    .lightborders();
 }
 
 // Define widths to use as classes
@@ -906,17 +990,19 @@
     }
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     margin: 5px;
-    .lightBackground;
+
+    .lightbackground();
+    .lightborders();
 }
 .SobiPro .spDetailEntry .spNoImage {
     width: @big-image;
-    height:calc(@big-image * @image-ratio);
+    height: calc(@big-image * @image-ratio);
     font-size: calc((@big-image * 6)/10);
 }
 .SobiPro .spNoImage i {
-    color: fade(@base-color, 40%);
+    color: lighten(@base-color, 30%);
     & when (@inverse = inverse) {
-        color: fade(@active-color, 40%);
+        color: lighten(@active-color, 60%);
     }
 }
 .SobiPro .spNoImageContainer {
@@ -946,7 +1032,81 @@
     -webkit-flex: 1;
 }
 
-// Entry details view
+
+// Tabs/Coloured Tabs
+// ----------------------------------------
+.SobiPro .tab-pane {
+    border: 1px solid;
+    .lightbackground();
+    .lightborders();
+    & when (@corners = rounded) {
+        border-radius: 4px;
+    }
+    padding: 10px;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+.SobiPro .tab-pane.tabs.coloured {
+    margin-top: 0;
+}
+.SobiPro .tab-pane.tabs.coloured.active {
+    border-top-left-radius: 0;
+}
+.SobiPro .spTablist {
+    margin-top: 20px;
+}
+.SobiPro .nav-tabs.coloured > li.active > a,
+.SobiPro .nav-tabs.coloured > li.active > a:hover,
+.SobiPro .nav-tabs.coloured > li.active > a:focus {
+    border: 1px solid;
+    .lightbackground();
+    .lightborders();
+
+    border-bottom-color: lighten(saturate(@base-color, 15%), 57%);
+    & when (@colour-set = cornflower) {
+        border-bottom-color: lighten(saturate(@base-color, 15%), 45%);
+    }
+    & when (@colour-set = cornfield) {
+        border-bottom-color: lighten(saturate(@base-color, 15%), 40%);
+    }
+    & when (@colour-set = malva) {
+        border-bottom-color: lighten(saturate(@base-color, 15%), 50%);
+    }
+    & when (@colour-set = meadow) {
+        border-bottom-color: lighten(saturate(@base-color, 15%), 60%);
+    }
+    & when (@colour-set = poppyseed) {
+        border-bottom-color: lighten(saturate(@base-color, 5%), 62%);
+    }
+    & when (@colour-set = roses) {
+        border-bottom-color: lighten(saturate(@base-color, 28%), 48%);
+    }
+    & when (@colour-set = blackwidow) {
+        border-bottom-color: darken(@active-color, 65%);
+        color: @font-color;
+    }
+}
+.SobiPro .nav-tabs > li > a:hover {
+    & when (@colour-set = blackwidow) {
+        border-color: darken(@active-color, 50%) darken(@active-color, 50%) darken(@active-color, 65%);;
+    }
+}
+.SobiPro .nav.nav-tabs > li > a:hover,
+.SobiPro .nav.nav-tabs > li > a:focus {
+    & when (@colour-set = blackwidow) {
+        color: @font-color;
+        background-color: darken(@active-color, 55%);;
+    }
+}
+.SobiPro .nav-tabs.coloured {
+    border-bottom: none;
+}
+.SobiPro .nav-pills a:focus,
+.SobiPro .nav-tabs a:focus {
+    outline: none;
+}
+
+    // Entry details view
 // ----------------------------------------
 .SobiPro .spDetails {
     font-size: 14px;
@@ -1084,6 +1244,11 @@
 }
 .SobiPro .spFieldUrl select {
     width: 100px;
+}
+.SobiPro .spUrlCounterValue {
+    font-size: 85%;
+    color: grey;
+    padding-left: 18px;
 }
 
 // Image Field
@@ -1270,7 +1435,8 @@
     padding-top: 25px;
 }
 .SobiPro table.payment tbody tr.info > td {
-    .mediumBackground;
+    .mediumborders();
+    .mediumbackground();
 }
 .SobiPro table.payment tbody tr.success > td {
     background-color: lighten(@alert-color, 20%);
@@ -1286,7 +1452,6 @@
 .SobiPro .disabledArea a {
     cursor: progress;
 }
-
 
 
 // Common fields styling via variable CSS classes
@@ -1328,7 +1493,7 @@
     background-image: linear-gradient(to right, transparent 0, rgba(red(@active-color), green(@active-color), blue(@active-color), 0.5) 100%);
 }
 .SobiPro .carousel-control.left {
-    background-image: linear-gradient(to right, rgba(red(@active-color), green(@active-color), blue(@active-color), 0.5) 0, transparent 100%);
+	background-image: linear-gradient(to right, rgba(red(@active-color), green(@active-color), blue(@active-color), 0.5) 0, transparent 100%);
 }
 
 // Support for Font Awesome 3 and 4
@@ -1420,10 +1585,12 @@
 .SobiPro table.SpCalendar th,
 .SobiPro table.SpCalendar td,
 .SobiPro table.SpCalendar {
-    .lightBackground;
+    .lightbackground();
+    .lightborders();
 }
 .SobiPro table.SpCalendar td.SpCalSun {
-    .mediumBackground;
+    .mediumborders();
+    .mediumbackground();
 }
 .SobiPro table.SpCalendar th {
     color: @base-color;
@@ -1446,7 +1613,8 @@
     & when (@corners = rounded) {
         border-radius: 4px;
     }
-    .lightBackground;
+    .lightbackground();
+    .lightborders();
 }
 .SobiPro .spCollection .nav > li > a {
     border-color: fade(#ffffff, 0%);
@@ -1462,10 +1630,12 @@
 // Profile Field
 // -----------------------------------------------
 .SobiPro .spProfile.striped > blockquote:nth-child(2n+1) {
-    .lightBackground;
+    .lightbackground();
+    .lightborders();
 }
 .SobiPro .spProfile.striped > blockquote:nth-child(2n) {
-    .mediumBackground;
+    .mediumborders();
+    .mediumbackground();
 }
 .SobiPro .spProfileSection {
     color: @base-color;
@@ -1579,6 +1749,7 @@
     .SobiPro .modal .control-group {
         margin-bottom: 6px;
     }
+    .SobiPro .spDetailEntry .spClassViewImage img,
     .SobiPro div.spClassViewImage img,
     .SobiPro .spEntryContainer .spClassViewImage img {
         width: calc(100% - 8px);
@@ -1590,6 +1761,7 @@
     .SigsiuTree .buttons {
         text-align: center;
     }
+    .SobiPro .spDetailEntry .spClassViewImage img,
     .SobiPro .spClassViewImage img {
         float:none!important;
     }
